--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   font-family: "League Spartan", sans-serif;
   color: hsl(300, 43%, 22%);
   font-size: 15px;
+  overflow-x: hidden;
 }
 
 main {
